<resources>
    <string name="app_name">app_lista</string>
    <string name="txt_hint_edit_primeiroNome">Primeiro Nome</string>
    <string name="txt_hint_edit_Sobrenome">Sobrenome</string>
    <string name="txt_hint_edit_NomeDoCurso">Nome do Curso</string>
    <string name="txt_hint_edit_TelefoneDeContato">Telefone de Contato</string>
    <string name="txt_titulo">App Lista</string>
    <string name="txt_button_Limpar">Limpar</string>
    <string name="txt_button_Salvar">Salvar</string>
    <string name="txt_button_Finalizar">Finalizar</string>
    <string name="txt_selecione_um_curso">Selecione um curso:</string>
</resources>